--- a/testcss.css
+++ b/testcss.css
@@ -6,7 +6,7 @@ body{
 	position: relative;
 	width: 100%;
 	height: 600px;
-	background-image: url('bg2.jpg');
+	/*background-image: url('bg2.jpg');*/
 	background-size: 100%;
 }
 #nav{
@@ -59,6 +59,7 @@ body{
 	color: white;
 	margin :25px;	
 }
+
 #welcome_text_div{
 	position: absolute;
 	width: 800px;
@@ -66,16 +67,35 @@ body{
 	top: 26%;
 	left: 24%;
 }
-#welcome_text{
-	background: linear-gradient(to right,#330867 0%,#30CFD0 100%);
-	-webkit-background-clip: text;
-	-webkit-text-fill-color: transparent;
-	font-family: sans-serif;
-	text-transform: uppercase;
-	font-weight: bold;
-	font-size: 57px;
-	margin-top: 50px;
+.banner{
+	width: 200px;
+
+	height: 40px;
+	overflow: hidden;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+}
+.banner video{
+	position: absolute;
+	top: 0;
+	left: 0;
+	width: 100px;
+	height: 25px;
+	/*object-fit: cover;*/
+}
+.banner p{
+	position: absolute;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+	font-size: 30px;
 	text-align: center;
+	text-transform: uppercase;
+	color: #000;
+	line-height: 100px;
+	mix-blend-mode: screen;
 }
 #welcome_text_sub{
 	color: #b3f0ff;
