--- a/main.css
+++ b/main.css
@@ -11,7 +11,7 @@ body{
 	background-size: 100%;
 }
 #nav{
-	position: absolute;
+	display: inline;
 	width :100%;
 	height: 50px;
 	
@@ -24,7 +24,6 @@ body{
 }
 #logo_text{
 	display: inline;
-	position:absolute;
 	color: white;
 	font-size: 25px;
 	top:-5px;
@@ -41,8 +40,8 @@ body{
 	border: 2px solid white;
 	padding: 5px;
 	margin-right:50px;
-	margin-top: -25px; 
 	border-radius: 5px;
+	margin-top: 20px;
 }
 #host_link:visited{
 	text-decoration: none;
@@ -58,8 +57,9 @@ body{
 	text-decoration: none;
 	font-family: sans-serif;
 	color: white;	
-	margin-top: -10px;
 	margin-right: 100px;
+	padding: 5px;
+	margin-top: 20px;
 }
 #nav_link2{
 	display: inline;
@@ -67,8 +67,9 @@ body{
 	text-decoration: none;
 	font-family: sans-serif;
 	color: white;
-	margin-top: -10px;
 	margin-right: 50px;
+	padding: 5px;
+	margin-top: 20px;
 }
 #nav_link3{
 	display: inline;
@@ -76,8 +77,9 @@ body{
 	text-decoration: none;
 	font-family: sans-serif;
 	color: white;
-	margin-top: -10px;
 	margin-right: 50px;
+	padding: 5px;
+	margin-top: 20px;
 }
 #welcome_text_div{
 	position: absolute;
@@ -188,38 +190,41 @@ body{
 	background-color: white;
 }
 #part1{
-	position: absolute;
-	width: 450px;
+	float: left;
+    display: inline;
+	width: 30%;
 	height: 400px;
 	margin-top: 50px;
-	margin-left: 60px;
+	margin-left: 3%;
 	border-radius: 15px;
 	border :0.5px solid grey; 
 	box-shadow: 10px 10px 5px grey;
 }
 #part2{
-	position: absolute;
-	width: 450px;
+	float: left;
+    display: inline;
+	width: 30%;
 	height: 400px;
 	margin-top: 50px;
-	margin-left: 540px;
+	margin-left: 2%;
 	border-radius: 15px;
 	border :0.5px solid grey; 
 	box-shadow: 10px 10px 5px grey;
 }
 #part3{
-	position: absolute;
-	width: 450px;
+	float: left;
+    display: inline;
+	width: 30%;
 	height: 400px;
 	margin-top: 50px;
-	margin-left: 1030px;
+	margin-left: 2%;
 	border-radius: 15px;
 	border :0.5px solid grey; 
 	box-shadow: 10px 10px 5px grey;
 }
 #part_image{
 	width:100%;
-	height:80%;
+	height:85%;
 	border-top-left-radius: 15px;
 	border-top-right-radius: 15px;
 }
@@ -257,40 +262,44 @@ body{
 	width:100%; 
 }
 #lower_part1{
-	position: absolute;
-	margin-left: 60px;
-	margin-top: 190px;
-	height:650px;
+	display: inline;
+    float: left;
+	margin-left: 3%;
+	margin-top: 10.11%;
+	height:74.2%;
 	width:45%;
 	background-color: #404040;
 	border-radius: 15px;
 }
 #lower_part2{
-	position: absolute;
-	margin-left: 760px;
-	margin-top: 190px;
-	height:300px;
+	display: inline;
+    float: left;
+	height:36.8%;
+	margin-left: 1%;
 	width:23%;
 	background-color: #404040;
 	border-radius: 15px;
+	margin-top: 10.10%;
 }
 #lower_part3{
-	position: absolute;
-	margin-left: 1125px;
-	margin-top: 190px;
-	height:300px;
+	display: inline;
+    float: left;
+	height:36.8%;
+	margin-left: 1%;
 	width:23%;
 	background-color: #404040;
 	border-radius: 15px;
+	margin-top: 7.45%;
 }
 #lower_part4{
-	position: absolute;
-	margin-left: 760px;
-	margin-top: 510px;
-	height:330px;
+	display: inline;
+    float: left;
+	height:35%;
+	margin-left: 1%;
 	width:47%;
 	background-color: #404040;
 	border-radius: 15px;
+	margin-top: 1%;
 }
 #lower_mid_heading{
 	position: absolute;
@@ -323,28 +332,28 @@ body{
 	color:white;
 }
 #bottom1{
-	position: absolute;
 	width:25%;
 	height:250px;
-	margin-left: 100px;
+	float: left;
+    display: inline;
 }
 #bottom2{
-	position: absolute;
 	width:25%;
 	height:250px;
-	margin-left: 450px;
+	float: left;
+    display: inline;
 }
 #bottom3{
-	position: absolute;
 	width:25%;
-	margin-left: 800px;
 	height:250px;
+	float: left;
+    display: inline;
 }
 #bottom4{
-	position: absolute;
 	width:25%;
 	height:250px;
-	margin-left: 1150px;
+	float: left;
+    display: inline;
 }
 #bottom_heading{
 	margin-top: 20px;
@@ -369,42 +378,47 @@ body{
 }
 #footer_text{
 	font-family: sans-serif;
-	margin-top: 15px;
-	margin-left: 100px;
+	float: left;
+    display: inline;
 }
 #world1{
-	position: absolute;
 	height: 20px;
 	width: 20px;
-	margin-left: 1260px;
-	margin-top: -33px;
+	float: right;
+    display: inline;
+    margin-top: 1%;
+    margin-right: 1%;
 }
 #footer_link{
-	position: absolute;
-	margin-top: -33px;
-	margin-left: 1290px;
+	float: right;
+    display: inline;
 	font-family: sans-serif; 
 	color:black;
+	margin-top: 1%;
+    margin-right: 1%;
 }
 .link{
 	color:black;
 }
 #footer_fb_image{
-	position: absolute;
 	font-size: 25px;
-	margin-left:1355px;
-	margin-top:-35px;
+	float: right;
+    display: inline;
+    margin-top: 1%;
+    margin-right: 1%;
 }
 #footer_twitter_image{
-	position: absolute;
 	font-size: 25px;
-	margin-top: -35px;
-	margin-left: 1390px;
+	float: right;
+    display: inline;
+    margin-top: 1%;
+    margin-right: 1%;
 }
 #footer_insta_image{
-	position: absolute;
 	height: 20px;
 	width: 20px;
-	margin-top: -35px;
-	margin-left: 1430px;
+	float: right;
+    display: inline;
+    margin-top: 1%;
+    margin-right: 6%;
 }
