--- a/main.css
+++ b/main.css
@@ -224,7 +224,7 @@ body{
 }
 #part_image{
 	width:100%;
-	height:85%;
+	height:80%;
 	border-top-left-radius: 15px;
 	border-top-right-radius: 15px;
 }
@@ -265,7 +265,7 @@ body{
 	display: inline;
     float: left;
 	margin-left: 3%;
-	margin-top: 10.11%;
+	margin-top: 2.11%;
 	height:74.2%;
 	width:45%;
 	background-color: #404040;
@@ -279,7 +279,7 @@ body{
 	width:23%;
 	background-color: #404040;
 	border-radius: 15px;
-	margin-top: 10.10%;
+	margin-top: 2.11%;
 }
 #lower_part3{
 	display: inline;
@@ -289,7 +289,7 @@ body{
 	width:23%;
 	background-color: #404040;
 	border-radius: 15px;
-	margin-top: 7.45%;
+	margin-top: 2%;
 }
 #lower_part4{
 	display: inline;
@@ -302,21 +302,21 @@ body{
 	margin-top: 1%;
 }
 #lower_mid_heading{
-	position: absolute;
+	float: left;
+	display: inline;
 	color:white;
-	margin-left: 70px;
-	margin-top: 50px;
+	margin-left: 4.5%;
+	margin-top: 4%;
 	font-family: sans-serif;
 	font-size: 35px;
 	font-weight: bold;
 }
 #lower_mid_sub{
-	position: absolute;
 	color:white;
-	margin-left: 70px;
-	margin-top: 105px;
 	font-family: sans-serif;
 	font-size: 18px;
+	padding-top: 7%; 
+	margin-left: 4.5%;
 }
 #lower_part{
 	color:white;
@@ -325,6 +325,18 @@ body{
 	font-weight: bold;
 	margin-top: 10px;
 	margin-left: 10px;
+}
+#host_link1{
+	display: inline;	
+	float: right;
+	text-decoration: none;
+	font-family: sans-serif;
+	color: white;
+	border: 2px solid white;
+	padding: 5px;
+	margin-right:5%;
+	border-radius: 5px;
+	margin-top: 4%;
 }
 #bottom{
 	width: 100%;
@@ -374,12 +386,13 @@ body{
 	height: 80px;
 }
 #footer_length{
-	width: 90%;
+	width: 95%;
 }
 #footer_text{
 	font-family: sans-serif;
 	float: left;
     display: inline;
+    margin-left: 4%
 }
 #world1{
 	height: 20px;
@@ -396,7 +409,9 @@ body{
 	color:black;
 	margin-top: 1%;
     margin-right: 1%;
+    text-decoration: none;
 }
+
 .link{
 	color:black;
 }
