--- a/main.css
+++ b/main.css
@@ -123,7 +123,6 @@ body{
 	position: absolute;
 	width: 60%;
 	height: 50px;
-	background-color:#DCDCDC;
 	bottom: 10%;
 	border-radius: 5px;
 	margin-left: 21%;
@@ -131,27 +130,33 @@ body{
 #where_div{
 	position: absolute;
 	width: 35%;
-	height: 50px;
+	height: 45px;
+	background-color:#DCDCDC;
 	border-right: 0.5px solid grey;
+	border-top-left-radius: 8px;
+	border-bottom-left-radius: 8px;
 }
 #check_div{
 	position: absolute;
 	width: 15%;
-	height: 50px;
+	height: 45px;
+	background-color:#DCDCDC;
 	border-right: 0.5px solid grey;
 	left:35%;
 }
 #check_out_div{
 	position: absolute;
 	width: 16%;
-	height: 50px;
+	height: 45px;
+	background-color:#DCDCDC;
 	border-right: 0.5px solid grey;
 	left:50%;
 }
 #guest_div{
 	position: absolute;
 	width: 18%;
-	height: 50px;
+	height: 45px;
+	background-color:#DCDCDC;
 	border-right: 0.5px solid grey;
 	left:66%;
 }
@@ -161,6 +166,9 @@ body{
 	height: 50px;
 	left:84%;
 	background-color:#cc0000;
+	border-top-right-radius: 8px;
+	border-bottom-right-radius: 8px;
+	border: 0.5px solid grey;
 }
 #search_div:hover{
 	background-color: #DC143C;
@@ -171,11 +179,10 @@ body{
 	margin-left: 15px;
 }
 #search_text{
-	position: absolute;
 	font-family: sans-serif;
 	color: white;
-	margin-left: 15px;
-	margin-top: 14px;
+	margin-left: 30%;
+    margin-top: 11%;
 	text-decoration: none;
 }
 #mid{
