--- a/main.css
+++ b/main.css
@@ -1,6 +1,259 @@
 
 body{
 	margin: 0;
+	
+}
+/** * index.scss * - Add any styles you want here! */
+/* * {
+	 box-sizing: border-box;
+}*/
+
+/*---------------------------------------- PRELOADER ----------------------------------------*/
+ .overlay {
+	 position: fixed;
+	 top: 0;
+	 left: 0;
+	 width: 100%;
+	 height: 100%;
+	 z-index: 9999;
+	 background: black;
+	 display: flex;
+	 flex-direction: column;
+	 justify-content: center;
+	 align-items: center;
+}
+
+@keyframes fadeOut{
+	100% {
+		opacity: 0;
+		visibility: hidden;
+	}
+}
+.overlay.hidden{
+	animation:fadeOut 2s;
+	animation-fill-mode: forwards;
+}
+ @keyframes move {
+	 0% {
+		 transform: translateY(0) scaleY(0.9);
+	}
+	 100% {
+		 transform: translateY(-100px) scaleY(1.1);
+	}
+}
+ .preloader {
+	 position: relative;
+	 animation: move 0.5s ease infinite alternate;
+}
+ @keyframes spin {
+	 0% {
+		 transform: rotateX(-15deg) rotateY(0deg);
+	}
+	 100% {
+		 transform: rotateX(-15deg) rotateY(180deg);
+	}
+}
+ .diamond {
+	 position: relative;
+	 width: 60px;
+	 height: 60px;
+	 transform-style: preserve-3d;
+	 transform-origin: center center;
+	 animation: spin 1s linear infinite;
+}
+ .diamond span:first-of-type {
+	 position: absolute;
+	 top: 0;
+	 left: 0;
+	 width: 60px;
+	 height: 60px;
+	 border: 4px solid gold;
+	 transform: rotateX(90deg) rotateZ(45deg);
+}
+ .diamond span:nth-of-type(2) {
+	 position: absolute;
+	 top: 0;
+	 left: 0;
+	 width: 60px;
+	 height: 60px;
+	 border: 4px solid gold;
+	 transform: rotateX(90deg) rotateY(90deg) rotateZ(45deg);
+}
+ .diamond span:last-of-type {
+	 position: absolute;
+	 top: 0;
+	 left: 0;
+	 width: 60px;
+	 height: 60px;
+	 border: 4px solid gold;
+	 transform: rotateZ(45deg);
+}
+ .movement {
+	 position: relative;
+	 width: 60px;
+	 height: 60px;
+}
+ @keyframes falloff {
+	 0% {
+		 top: 30px;
+		 height: 0px;
+		 opacity: 0;
+	}
+	 50% {
+		 top: 0;
+		 height: 30px;
+		 opacity: 1;
+	}
+	 100% {
+		 top: 0;
+		 height: 0px;
+		 opacity: 0;
+	}
+}
+ .movement span:first-of-type {
+	 position: absolute;
+	 left: 0;
+	 top: 0;
+	 width: 4px;
+	 height: 30px;
+	 border-radius: 4px;
+	 background-color: white;
+	 opacity: 0;
+	 animation: falloff 1s ease infinite;
+}
+ @keyframes falloff-2 {
+	 0% {
+		 height: 0px;
+		 opacity: 0;
+	}
+	 50% {
+		 height: 20px;
+		 opacity: 1;
+	}
+	 100% {
+		 height: 0px;
+		 opacity: 0;
+	}
+}
+ .movement span:first-of-type::after {
+	 content: '';
+	 position: absolute;
+	 top: 40px;
+	 left: 0;
+	 width: 4px;
+	 height: 20px;
+	 border-radius: 4px;
+	 background-color: white;
+	 opacity: 0;
+	 animation: falloff-2 1s ease infinite;
+}
+ @keyframes falloff-3 {
+	 0% {
+		 top: 40px;
+		 height: 0px;
+		 opacity: 0;
+	}
+	 50% {
+		 top: 20px;
+		 height: 20px;
+		 opacity: 1;
+	}
+	 100% {
+		 top: 20px;
+		 height: 0px;
+		 opacity: 0;
+	}
+}
+ .movement span:nth-of-type(2) {
+	 position: absolute;
+	 top: 20px;
+	 left: calc(50% - 2px);
+	 width: 4px;
+	 height: 20px;
+	 border-radius: 4px;
+	 background-color: white;
+	 opacity: 0;
+	 animation: falloff-3 1s ease infinite;
+}
+ @keyframes falloff-4 {
+	 0% {
+		 height: 0px;
+		 opacity: 0;
+	}
+	 50% {
+		 height: 40px;
+		 opacity: 1;
+	}
+	 100% {
+		 height: 0px;
+		 opacity: 0;
+	}
+}
+ .movement span:nth-of-type(2)::after {
+	 content: '';
+	 position: absolute;
+	 top: 30px;
+	 left: 0;
+	 width: 4px;
+	 height: 40px;
+	 border-radius: 4px;
+	 background-color: white;
+	 opacity: 0;
+	 animation: falloff-4 1s ease infinite;
+}
+ @keyframes falloff-5 {
+	 0% {
+		 top: 30px;
+		 height: 0px;
+		 opacity: 0;
+	}
+	 50% {
+		 top: 0;
+		 height: 30px;
+		 opacity: 1;
+	}
+	 100% {
+		 top: 0;
+		 height: 0px;
+		 opacity: 0;
+	}
+}
+ .movement span:last-of-type {
+	 position: absolute;
+	 top: 0;
+	 right: 0;
+	 width: 4px;
+	 height: 30px;
+	 border-radius: 4px;
+	 background-color: white;
+	 opacity: 0;
+	 animation: falloff-5 1s ease infinite;
+}
+ @keyframes falloff-6 {
+	 0% {
+		 height: 0px;
+		 opacity: 0;
+	}
+	 50% {
+		 height: 20px;
+		 opacity: 1;
+	}
+	 100% {
+		 height: 0px;
+		 opacity: 0;
+	}
+}
+ .movement span:last-of-type::after {
+	 content: '';
+	 position: absolute;
+	 top: 40px;
+	 left: 0;
+	 width: 4px;
+	 height: 20px;
+	 border-radius: 4px;
+	 background-color: white;
+	 opacity: 0;
+	 animation: falloff-6 1s ease infinite;
 }
 
 #header{
@@ -8,8 +261,33 @@ body{
 	width: 100%;
 	height: 600px;
 	background-image: url('bg2.jpg');
-	background-size: 100%;
+	background-size: cover;
+	background-position: center center;
+	background-repeat: no-repeat;
+	backface-visibility: hidden;
+	animation: slideBg 8s linear infinite 0s;
+	animation-timing-function:  ease-in-out; 
+
 }
+@keyframes slideBg{
+	0%{
+		background-image: url('check1.jpg');
+
+	}
+	25%{
+		background-image: url('check4.jpg');
+	}
+	50%{
+		background-image: url('check5.jpg');
+	}
+	75%{
+		background-image: url('check6.jpg');
+	}
+	100%{
+		background-image: url('check9.jpg');
+	}
+}
+
 #nav{
 	display: inline;
 	width :100%;
@@ -17,8 +295,8 @@ body{
 	
 }
 #logo{
-	height: 26px;
-	width: 30px;
+	height: 50px;
+	width: 130px;
 	margin-top: 20px;
 	margin-left: 27px;
 }
@@ -99,7 +377,7 @@ body{
 	text-align: center;
 }
 #welcome_text_sub{
-	color: #b3f0ff;
+	color: #ff4d94;
 	font-family: sans-serif;
 	font-weight: bold;
 	font-size: 37px;
