--- a/main.css
+++ b/main.css
@@ -1,13 +1,21 @@
-
 body{
 	margin: 0;
 	
 }
-/** * index.scss * - Add any styles you want here! */
-/* * {
-	 box-sizing: border-box;
-}*/
 
+::-webkit-scrollbar {
+  width: 20px;
+}
+
+::-webkit-scrollbar-track {
+  	box-shadow: inset 0 0 5px grey; 
+  	background-color: rgba(0,0,0,0.2);
+}
+ 
+::-webkit-scrollbar-thumb {
+  background: linear-gradient(to top,#ff9933 0%,#800040 100%); 
+  border-radius: 10px;
+}
 /*---------------------------------------- PRELOADER ----------------------------------------*/
  .overlay {
 	 position: fixed;
@@ -265,23 +273,37 @@ body{
 	background-position: center center;
 	background-repeat: no-repeat;
 	backface-visibility: hidden;
-	animation: slideBg 8s linear infinite 0s;
-	animation-timing-function:  ease-in-out; 
+	animation: slideBg 10s linear infinite 0s;
+	/*animation-timing-function:  ease-in-out; */
 
 }
 @keyframes slideBg{
 	0%{
 		background-image: url('check1.jpg');
-
+	}
+	0.001%{
+		background-image: url('check4.jpg');
 	}
 	25%{
 		background-image: url('check4.jpg');
 	}
+	25.001%{
+		background-image: url('check5.jpg');
+	}
 	50%{
 		background-image: url('check5.jpg');
 	}
+	50.001%{
+		background-image: url('check6.jpg');
+	}
+	50.001%{
+		background-image: url('check6.jpg');
+	}
 	75%{
 		background-image: url('check6.jpg');
+	}
+	75.001%{
+		background-image: url('check9.jpg');
 	}
 	100%{
 		background-image: url('check9.jpg');
@@ -367,7 +389,7 @@ body{
 	left: 18%;
 }
 #welcome_text{
-	background: linear-gradient(to right,#d6249f 0%,#fd5949 100%);
+	background: linear-gradient(to right,#ff9900 0%,#ffb84d 100%);
 	-webkit-background-clip: text;
 	-webkit-text-fill-color: transparent;
 	font-family: sans-serif;
@@ -377,7 +399,7 @@ body{
 	text-align: center;
 }
 #welcome_text_sub{
-	color: #ff4d94;
+	color: #ff9900;
 	font-family: sans-serif;
 	font-weight: bold;
 	font-size: 37px;
@@ -443,21 +465,21 @@ body{
 	width: 16%;
 	height: 50px;
 	left:84%;
-	background-color:#cc0000;
+	background:linear-gradient(to right,#ff9933 0%,#800040 100%);
 	border-top-right-radius: 8px;
 	border-bottom-right-radius: 8px;
 	border: 0.5px solid grey;
 }
-#search_div:hover{
-	background-color: #DC143C;
-}
+/*.fa { transform: scale(1.5,1); }*/
 
 #search_text{
 	font-family: sans-serif;
 	color: white;
-	margin-left: 30%;
+	margin-left: 15%;
     margin-top: 11%;
 	text-decoration: none;
+	float: left;
+	display: inline;
 }
 #mid{
 	position: relative;
